--- a/Js觀念題/data-*/data.html
+++ b/Js觀念題/data-*/data.html
@@ -18,7 +18,7 @@
     function clickHandler(e){
         let num = e.target.dataset.num;
         let dog = e.target.dataset.dog;
-        console.log(num,dog);
+        console.log(num,dog);   //0,3
     };
     list.addEventListener('click',clickHandler);
 
